logs/Slang/chapter-11/11.12--let_construct.sv.log
name: let_construct
description: let construct test
should_fail: 0
tags: 11.12
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.12--let_construct.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.12--let_construct.sv:14:1: error: language feature not yet supported
let op(x, y, z) = |((x | y) & z);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.12--let_construct.sv:14:17: error: expected expression
let op(x, y, z) = |((x | y) & z);
                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.12--let_construct.sv:14:33: error: expected '='
let op(x, y, z) = |((x | y) & z);
                                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.12--let_construct.sv:17:6: error: use of undeclared identifier 'op'
	d = op(.x(a), .y(b), .z(c));
	    ^~
